# Comic-Book-Reader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  comicbook.cpp  comicbook.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
ImageMagick/: ChangeLog.txt  NOTICE.txt  QuickStart.txt  configure.xml  index.html
ImageMagick/Magick++_Demo/: README.txt  analyze.cpp  button.cpp  demo.cpp  detrans.cpp  flip.cpp  gravity.cpp  piddle.cpp  shapes.cpp  zoom.cpp
ImageMagick/include/Magick++/: Include.h
ImageMagick/include/MagickCore/: composite-private.h  exception-private.h  magick-baseconfig.h  nt-base-private.h  pixel-private.h  string-private.h  studio.h  token-private.h  utility-private.h  version.h  xwindow-private.h
ImageMagick/include/MagickWand/: studio.h
ImageMagick/www/: ImageMagickObject.html  advanced-linux-installation.html  advanced-unix-installation.html  advanced-windows-installation.html  animate.html  architecture.html  changelog.html  cipher.html  cite.html  clahe.html  color-management.html  color-thresholding.html  color.html  command-line-options.html  command-line-processing.html  command-line-tools.html  compare.html  compose.html  composite.html  conjure.html  connected-components.html  contact.html  convert.html  convex-hull.html  defines.html  develop.html  display.html  distribute-pixel-cache.html  download.html  escape.html  examples.html  exception.html  export.html  formats.html  fx.html  gradient.html  high-dynamic-range.html  history.html  identify.html  import.html  (+30 more)
ImageMagick/www/Magick++/: Documentation.html  Drawable.html  Image++.html  Pixels.html  Quantum.html  STL.html
ImageMagick/www/api/: Image++.html  animate.html  annotate.html  attribute.html  blob.html  cache-view.html  cache.html  channel.html  cipher.html  color.html  colormap.html  colorspace.html  compare.html  composite.html  constitute.html  decorate.html  deprecate.html  display.html  distort.html  draw.html  drawing-wand.html  effect.html  enhance.html  exception.html  feature.html  fourier.html  fx.html  histogram.html  image-view.html  image.html  layer.html  list.html  magick++-classes.html  magick-deprecate.html  magick-image.html  magick-property.html  magick-wand.html  magick.html  memory.html  mime.html  (+23 more)
ImageMagick/www/assets/: magick.css
ImageMagick/www/source/: configure.xml  mgk.c
bit7z/: BUILD.txt
docs/: report.md
include/: comicbook.h  mainwindow.h  smartlabel.h
resources/: CBR.rc  attribute.html
src/: cbfile.cpp  cbfile.h  comicbook.cpp  comicbook.h  extractdialog.cpp  extractdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  smartimage.cpp  smartimage.h  smartlabel.cpp  smartlabel.h
